adding LCBG post

--- a/_posts/2016-02-07-lcbgs.md
+++ b/_posts/2016-02-07-lcbgs.md
@@ -3,22 +3,74 @@ layout: post
 title:  Luminous Compact Blue Galaxies: A critical phase in the evolution of dwarf elliptical galaxies
 ---
 
-An important test of galaxy evolution theory is to connect populations of galaxies that we see in the past to galaxies observed in the nearby Universe: What were the progenitors of the spiral, elliptical, and dwarf galaxies that we observed today?   The most numerous type of galaxy observed are dwarf galaxies, and in the largest structures in the Universe, dwarf elliptical galaxies are the most numerous galaxies in these clusters of galaxies.  These galaxies are small and dead:  these galaxies have lost all of their gas and are no longer forming stars.  But how did they end up in clusters and in this state?   
+An important test of galaxy evolution theory is to connect populations
+of galaxies that we see in the past to galaxies observed in the nearby
+Universe: What were the progenitors of the spiral, elliptical, and
+dwarf galaxies that we observed today?  The most numerous type of
+galaxy observed are dwarf galaxies.  They are believed to be the basic
+building blocks that form larger galaxies.  In the largest structures
+in the Universe, dwarf elliptical galaxies are the most numerous type
+of dwarf galaxies.  These galaxies are small and dead: they have lost
+all of their gas and are no longer forming stars.  But how did they
+end up in clusters and in this state?
 
-Well, in all likelihood, these galaxies have been falling into clusters since the beginning of time where the dense environment in galaxy clusters triggers a burst of star formation signaling the end of their lives.  This hypothesis is based on observations of Luminous Compact Blue Galaxies (LCBGs) -- a population of galaxies bursting with star formation seen primarily when the Universe was half its current age. 
+Well, in all likelihood, these galaxies have been falling into
+clusters since the beginning of time where the dense environment in
+galaxy clusters triggers a burst of star formation signaling the end
+of their lives.  This hypothesis is based on observations of Luminous
+Compact Blue Galaxies (LCBGs) -- a population of galaxies bursting
+with star formation seen primarily when the Universe was half its
+current age.
 
-what are LCBGs (picture of one)?
+
+![example lcbg]({{ site.baseurl }}/lcbg/lcbg1.jpg "Example of an LCBG")
 
 
-Now, when we look for LCBGs in galaxy clusters, and we were looking at the largest galaxy clusters that are known, we found these clusters had far more LCBGs than one would expect based on their density in the field.   The population of LCBGs in clusters was *enhanced* as compared to the field similar to the *enhanced* number of dwarf elliptical galaxies seen in local galaxy clusters.   More so than that, the distribution of LCBGs in clustes, both in space and velocity, seems to indicate that they are recent arrivals ot the cluster environment.  
+What are LCBGs?  They are compact galaxies original discovered by Koo
+& Kron in the 1980s.  Follow-up observations indicated that the
+typical sizes of LCBGs were 2 kpc, similar to the Magellanic Clouds,
+but they had magnitudes of M_B = -21, similar to the Milky Way.  LCBGs
+typically have extremely blue colors, and much higher star formation
+rates than what is expected for their sizes. 
 
-some more stuff on why cluster LCBGs are dEs
 
-In our most recent work, we found the cluster LCBGs were very similar to field LCBGs, but we did find some interesting results.  
--neighbors
--weird star formation
+Now, when we look for LCBGs in galaxy clusters, and we were looking at
+the largest galaxy clusters that are known, we found these clusters
+had far more LCBGs than one would expect based on their density in the
+field.  The population of LCBGs in clusters was *enhanced* as compared
+to the field similar to the *enhanced* number of dwarf elliptical
+galaxies seen in local galaxy clusters.  More so than that, the
+distribution of LCBGs in clustes, both in space and velocity, seems to
+indicate that they are recent arrivals ot the cluster environment.
 
-what's next
+
+In our most recent work, we found the cluster LCBGs were very similar
+to field LCBGs and had similar properties to local dwarf elliptical
+galaxies.  As compared to dwarf elliptical galaxies, LCBGs had a
+similar size, dynamic mass, and chemical abundance.  If we make some
+reasonable assumptions about their accretion rate and how the dense
+cluster environment effects LCBGs over time, we can compare how the
+luminosity function, the number of objects per magnitude, of LCBGs
+compares to dwarf elliptical galaxies.  As can be seen below, between
+30-75% of dwarf ellipticals likely went through an LCBG phase in the
+last 8 Billion years.  
+
+![lcbg lf]({{ site.baseurl }}/lcbg/lcbg_lf.jpg "LCBG LF evolution")
+
+Many dwarf elliptical galaxies in nearby clusters do show evidence for
+recent in-fall and past bursts of star formation.  This is consistent
+with what we find in LCBGs.  
+
+Nonetheless, we did find some interesting results.  Most LCBGs in
+clusters had a very close neighbor and approximately 10% of LCBGs are
+expected to merge with that neighbor.  Furthermore, 30% of LCBGs
+showed evidence for either obscurred star formation and/or a complex
+burst of star formation.  These are two interesting areas to follow-up
+to determine how LCBGs might evolve in the future. 
+
+
+
+
 
 
 
