--- a/_posts/2016-02-07-lcbgs.md
+++ b/_posts/2016-02-07-lcbgs.md
@@ -30,7 +30,7 @@ What are LCBGs?  They are compact galaxies original discovered by Koo
 & Kron in the 1980s.  Follow-up observations indicated that the
 typical sizes of LCBGs were 2 kpc, similar to the Magellanic Clouds,
 but they had magnitudes of M_B = -21, similar to the Milky Way.  LCBGs
-typically have extremely blue colors, and much higher star formation
+typically have extremely blue colors and much higher star formation
 rates than what is expected for their sizes. 
 
 
