removed colon in title

--- a/_posts/2016-02-07-lcbgs.md
+++ b/_posts/2016-02-07-lcbgs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Luminous Compact Blue Galaxies: A critical phase in the evolution of dwarf elliptical galaxies
+title:  Luminous Compact Blue Galaxies--A critical phase in the evolution of dwarf elliptical galaxies
 ---
 
 An important test of galaxy evolution theory is to connect populations
@@ -37,8 +37,8 @@ rates than what is expected for their sizes.
 Now, when we look for LCBGs in galaxy clusters, and we were looking at
 the largest galaxy clusters that are known, we found these clusters
 had far more LCBGs than one would expect based on their density in the
-field.  The population of LCBGs in clusters was *enhanced* as compared
-to the field similar to the *enhanced* number of dwarf elliptical
+field.  The population of LCBGs in clusters was enhanced as compared
+to the field similar to the enhanced number of dwarf elliptical
 galaxies seen in local galaxy clusters.  More so than that, the
 distribution of LCBGs in clustes, both in space and velocity, seems to
 indicate that they are recent arrivals ot the cluster environment.
