changed image in lcbg

--- a/_posts/2016-02-07-lcbgs.md
+++ b/_posts/2016-02-07-lcbgs.md
@@ -23,7 +23,7 @@ with star formation seen primarily when the Universe was half its
 current age.
 
 
-![example lcbg]({{ site.baseurl }}/lcbg/lcbg1.jpg "Example of an LCBG")
+![example lcbg]({{ site.baseurl }}/lcbg/lcbg1.jpg) 
 
 
 What are LCBGs?  They are compact galaxies original discovered by Koo
