updates to lcbg post

--- a/_posts/2016-02-07-lcbgs.md
+++ b/_posts/2016-02-07-lcbgs.md
@@ -23,7 +23,7 @@ with star formation seen primarily when the Universe was half its
 current age.
 
 
-![example lcbg]({{ site.baseurl }}/lcbg/lcbg1.jpg) 
+![example lcbg]({{ site.baseurl }}/images/lcbg1.jpg) 
 
 
 What are LCBGs?  They are compact galaxies original discovered by Koo
@@ -37,8 +37,8 @@ rates than what is expected for their sizes.
 Now, when we look for LCBGs in galaxy clusters, and we were looking at
 the largest galaxy clusters that are known, we found these clusters
 had far more LCBGs than one would expect based on their density in the
-field.  The population of LCBGs in clusters was enhanced as compared
-to the field similar to the enhanced number of dwarf elliptical
+field.  The population of LCBGs in clusters was *enhanced* as compared
+to the field similar to the *enhanced* number of dwarf elliptical
 galaxies seen in local galaxy clusters.  More so than that, the
 distribution of LCBGs in clustes, both in space and velocity, seems to
 indicate that they are recent arrivals ot the cluster environment.
@@ -55,7 +55,7 @@ compares to dwarf elliptical galaxies.  As can be seen below, between
 30-75% of dwarf ellipticals likely went through an LCBG phase in the
 last 8 Billion years.  
 
-![lcbg lf]({{ site.baseurl }}/lcbg/lcbg_lf.jpg "LCBG LF evolution")
+![lcbg lf]({{ site.baseurl }}/images/lcbg_lf.gif "LCBG LF evolution")
 
 Many dwarf elliptical galaxies in nearby clusters do show evidence for
 recent in-fall and past bursts of star formation.  This is consistent
@@ -67,3 +67,6 @@ expected to merge with that neighbor.  Furthermore, 30% of LCBGs
 showed evidence for either obscurred star formation and/or a complex
 burst of star formation.  These are two interesting areas to follow-up
 to determine how LCBGs might evolve in the future. 
+
+For more information, see S. M. Crawford et al., [*Spectroscopy of Luminous Compact Blue Galaxies in Distant Clusters. II. Physical Properties of dE Progenitor Candidates*](http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2016ApJ...817...87C&link_type=EJOURNAL&db_key=AST&high=), 2016,The Astrophysical Journal, Volume 817, 87.   And also available on the [arXiv](
+http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2016ApJ...817...87C&link_type=PREPRINT&db_key=AST).
