draft and typos

--- a/_posts/2017-02-27-dtu17_day1.md
+++ b/_posts/2017-02-27-dtu17_day1.md
@@ -3,7 +3,9 @@ layout: post
 title: Detecting the Unexpected Day one
 ---
 
-Today was the first day of [Detectina gthe Unexcpected](http://www.cvent.com/events/detecting-the-unexpected-discovery-in-the-era-of-astronomically-big-data/event-summary-0db6808d548b4a9ea6466b43046a1ff5.aspx), a conference all about what we don't know about.  How do we find new things in data sets which are too big to look at?  What new tools will we use with the next generation of surveys? As conference chair Josh Peek pointed out, much of this work builds on the big data project of the turn of the last century which led to so much of our current understanding of the Universe.  
+*draft*
+
+Today was the first day of [Detecting the Unexpected](http://www.cvent.com/events/detecting-the-unexpected-discovery-in-the-era-of-astronomically-big-data/event-summary-0db6808d548b4a9ea6466b43046a1ff5.aspx), a conference all about what we don't know about.  How do we find new things in data sets which are too big to look at?  What new tools will we use with the next generation of surveys? As conference chair Josh Peek pointed out, much of this work builds on the big data project of the turn of the last century which led to so much of our current understanding of the Universe.  
 
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Lovely shoutout to the “founding mothers” of astronomical data science by <a href="https://twitter.com/jegpeek">@jegpeek</a> during the opening remarks of <a href="https://twitter.com/hashtag/dtu17?src=hash">#dtu17</a> <a href="https://twitter.com/hashtag/womenswork?src=hash">#womenswork</a> <a href="https://t.co/BmUVe2iNlN">pic.twitter.com/BmUVe2iNlN</a></p>&mdash; Kelle Cruz (@kellecruz) <a href="https://twitter.com/kellecruz/status/836218996894617601">February 27, 2017</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
