--- a/_posts/2017-02-27-dtu17_day1.md
+++ b/_posts/2017-02-27-dtu17_day1.md
@@ -14,17 +14,17 @@ We had a great set of talks today which started off with Umaa Rebbapragada, who 
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Rebbapragada discusses how to overcome training set and domain set having different underlying distributions <a href="https://twitter.com/hashtag/DtU17?src=hash">#DtU17</a> <a href="https://t.co/Jxfjw3CoOi">pic.twitter.com/Jxfjw3CoOi</a></p>&mdash; Molly Peeples (@astronomolly) <a href="https://twitter.com/astronomolly/status/836225313034104832">February 27, 2017</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 This was followed by Ashish Mahabah discussing some of the issues that will be further faced by the [LSST](https://www.lsst.org/) survey and detecting transients in there, and then Casey Law describing the challenges of detecting fast radio bursts. 
-  These three talksraised a few points that we would see throughout much of the day:
+  These three talks raised a few points that we would see throughout much of the day:
  * Domain adaptation: Can networks trained on one data set be applicable to another data set?  If not, how much re-training will they require?  
  * Labels, labels, labels:  What training set do you need in order to teach your machines?  
  * Compressing data:  How do we go through the big data streams to what we want to know?
  * Errors:  Why doesn't any ML code include errors? 
 
-The second half of the morning session was focused on deep learning with an overview by Minia Manteiga and then a number of deep learning applications were presented.   Likely because it was the most visual, I found using deep learning to find lensing candidates by Brian Nord and Colin Jacobs to be the most striking, but the most provocative ws Marc Huertas-Company and Fernando Caro fitting simulations and comparing them to data.  There was already chatter about an unconference session about that. 
+The second half of the morning session was focused on deep learning with an overview by Minia Manteiga and then a number of deep learning applications were presented.   Likely because it was the most visual, I found using deep learning to find lensing candidates by Brian Nord and Colin Jacobs to be the most striking, but the most provocative was Marc Huertas-Company and Fernando Caro fitting simulations and comparing them to data.  There was already chatter about an unconference session about that. 
 
-Arjun Dey's talk was highly entertaining and informative about maximumizing serendipity discoveries, but his was also one of the first talks to introduce large data sets ready for mining.  Other data sets that are available include Pan Starrs DR1 (Armin Rest and Branimir Sesar) and the Hubble Source Catalog (Rick White).   There is so much data out there, but the big challenge is organizing it in some manner to be useful.   
+Arjun Dey's talk was highly entertaining and informative about maximizing serendipity discoveries, but his was also one of the first talks to introduce large data sets ready for mining.  Other data sets that are available include Pan Starrs DR1 (Armin Rest and Branimir Sesar) and the Hubble Source Catalog (Rick White).   There is so much data out there, but the big challenge is organizing it in some manner to be useful.   
 
 The afternoon definitely had some great talks on outliers.  This included finding the [400 weirdest spectra in SDSS](http://adsabs.harvard.edu/abs/2017MNRAS.465.4530B) by Dalya Baron and [DEMUD](https://github.com/wkiri/DEMUD) (Discovery via Eigenbasis Modeling of Uninteresting Data) by Kiri Wagstaff.  And a critical point was made by Stephanie Juneau during her talk on AGN and their galaxy hosts, understanding the completeness and systematics are absolutely essential for determine the underlying relationships observed in data. 
 
-It was a great day filled with so much detail that I'm not even coming close to captuing all of the detail nor even what happened during the unconferences! Unfortunately I've only mentioend a few highlights and some very broad strokes.   Fortunately, STSCI records the talks and webcasts are availble [here](https://webcast.stsci.edu/webcast/searchresults.xhtml?searchtype=20&eventid=251&sortmode=2) and there is the [running notes as well](https://docs.google.com/document/d/1RySP1NfCIRntKaKVyvN5XRxkQc-Ue5e3VKEVwc5dEIM/edit#heading=h.lnn2hkgshnh9).
+It was a great day filled with so much detail that I'm not even coming close to capturing all of the detail nor even what happened during the unconferences! Unfortunately, I've only mentioned a few highlights and some very broad strokes.   Fortunately, STSCI records the talks and webcasts are available [here](https://webcast.stsci.edu/webcast/searchresults.xhtml?searchtype=20&eventid=251&sortmode=2) and there are the [running notes as well](https://docs.google.com/document/d/1RySP1NfCIRntKaKVyvN5XRxkQc-Ue5e3VKEVwc5dEIM/edit#heading=h.lnn2hkgshnh9).
 
